@@ -21,9 +21,24 @@ grid.collection <- function(..., gp=gpar(), draw=TRUE, vp=NULL) {
 # values rather than letting the user specify a unit.
 
 validDetails.axis <- function(x) {
-  if (!is.null(x$at))
+  if (!is.null(x$at)) {
     x$at <- as.numeric(x$at)
-  x$label <- as.logical(x$label)
+    if (length(x$at) < 1 ||
+        !is.finite(x$at))
+      stop("Invalid at location in axis")
+  }
+  if (!is.logical(x$label)) {
+    # labels specified
+    # Can only spec labels if at is not NULL
+    if (is.null(x$at))
+      stop("Illegal to specify axis labels when at is NULL")
+    # Must be either language object or string
+    if (!is.language(x$label))
+      x$label <- as.character(x$label)
+    # Must be same number of labels as "at" locations
+    if (length(x$label) != length(x$at))
+      stop("labels and at locations must have same length")
+  }
   x$main <- as.logical(x$main)
   x
 }
@@ -36,10 +51,7 @@ drawDetails.xaxis <- function(x, recording=TRUE) {
     # Add the new output as children
     x <- addGrob(x, make.xaxis.major(x$at, x$main))
     x <- addGrob(x, make.xaxis.ticks(x$at, x$main))
-    if (x$label)
-      x <- addGrob(x, make.xaxis.labels(x$at, x$main))
-    else
-      x <- removeGrob(x, "labels", warn=FALSE)
+    x <- updateXlabels(x)
     # Apply any edits relevant to children
     x <- applyEdits(x, x$edits)
     # Draw the children
@@ -62,26 +74,18 @@ editDetails.xaxis <- function(x, specs) {
     } else {
       x <- addGrob(x, make.xaxis.major(x$at, x$main))
       x <- addGrob(x, make.xaxis.ticks(x$at, x$main))
-      if (x$label)
-        x <- addGrob(x, make.xaxis.labels(x$at, x$main))
-      else
-        x <- removeGrob(x, "labels", warn=FALSE)
+      x <- updateXlabels(x)
     }
   }
   if ("label" %in% slot.names) {
-    if (x$label)
-      x <- addGrob(x, make.xaxis.labels(x$at, x$main))
-    else
-      x <- removeGrob(x, "labels", warn=FALSE)    
+    if (!is.null(x$at))
+      x <- updateXlabels(x)
   }
   if ("main" %in% slot.names)
-    if (!is.null(at)) {
+    if (!is.null(x$at)) {
       x <- addGrob(x, make.xaxis.major(x$at, x$main))
       x <- addGrob(x, make.xaxis.ticks(x$at, x$main))
-      if (x$label)
-        x <- addGrob(x, make.xaxis.labels(x$at, x$main))
-      else
-        x <- removeGrob(x, "labels", warn=FALSE)
+      x <- updateXlabels(x)
     }
   x
 }
@@ -109,15 +113,26 @@ make.xaxis.ticks <- function(at, main) {
                name="ticks")
 }
 
-make.xaxis.labels <- function(at, main) {
+make.xaxis.labels <- function(at, label, main) {
   # FIXME:  labels only character versions of "at"
   if (main)
     label.y <- unit(-1.5, "lines")
   else
     label.y <- unit(1, "npc") + unit(1.5, "lines")
-  textGrob(as.character(at), unit(at, "native"), label.y,
+  if (is.logical(label))
+    labels <- as.character(at)
+  else
+    labels <- label
+  textGrob(labels, unit(at, "native"), label.y,
            just="centre", rot=0,
            check.overlap=TRUE, name="labels")
+}
+
+updateXlabels <- function(x) {
+  if (is.logical(x$label) && !x$label) 
+    removeGrob(x, "labels", warn=FALSE)
+  else
+    addGrob(x, make.xaxis.labels(x$at, x$label, x$main))
 }
 
 xaxisGrob <- function(at=NULL, label=TRUE, main=TRUE,
@@ -141,10 +156,10 @@ grid.xaxis <- function(at=NULL, label=TRUE, main=TRUE,
   } else {
     major <- make.xaxis.major(at, main)
     ticks <- make.xaxis.ticks(at, main)
-    if (label)
-      labels <- make.xaxis.labels(at, main)
-    else
+    if (is.logical(label) && !label)
       labels <- NULL
+    else
+      labels <- make.xaxis.labels(at, label, main)
   }
   xg <- applyEdits(gTree(at=at, label=label, main=main,
                          children=gList(major, ticks, labels),
@@ -164,10 +179,7 @@ drawDetails.yaxis <- function(x, recording=TRUE) {
     x$at <- grid.pretty(current.viewport()$yscale)
     x <- addGrob(x, make.yaxis.major(x$at, x$main))
     x <- addGrob(x, make.yaxis.ticks(x$at, x$main))
-    if (x$label)
-      x <- addGrob(x, make.yaxis.labels(x$at, x$main))
-    else
-      x <- removeGrob(x, "labels", warn=FALSE)
+    x <- updateYlabels(x)
     x <- applyEdits(x, x$edits)
     for (i in childNames(x))
       grid.draw(getGrob(x, i))
@@ -184,26 +196,19 @@ editDetails.yaxis <- function(x, specs) {
     } else {
       x <- addGrob(x, make.yaxis.major(x$at, x$main))
       x <- addGrob(x, make.yaxis.ticks(x$at, x$main))
-      if (x$label)
-        x <- addGrob(x, make.yaxis.labels(x$at, x$main))
-      else
-        x <- removeGrob(x, "labels", warn=FALSE)
+      x <- updateYLabels(x)
+      x <- updateYlabels(x)
     }
   }
   if ("label" %in% slot.names) {
-    if (x$label)
-      x <- addGrob(x, make.xaxis.labels(x$at, x$main))
-    else
-      x <- removeGrob(x, "labels", warn=FALSE)    
+    if (!is.null(x$at))
+      x <- updateYlabels(x)
   }
   if ("main" %in% slot.names)
-    if (!is.null(at)) {
+    if (!is.null(x$at)) {
       x <- addGrob(x, make.yaxis.major(x$at, x$main))
       x <- addGrob(x, make.yaxis.ticks(x$at, x$main))
-      if (x$label)
-        x <- addGrob(x, make.yaxis.labels(x$at, x$main))
-      else
-        x <- removeGrob(x, "labels", warn=FALSE)
+      x <- updateYlabels(x)
     }
   x
 }
@@ -231,7 +236,7 @@ make.yaxis.ticks <- function(at, main) {
                name="ticks")
 }
 
-make.yaxis.labels <- function(at, main) {
+make.yaxis.labels <- function(at, label, main) {
   if (main) {
     hjust <- "right"
     label.x <- unit(-1, "lines")
@@ -241,8 +246,19 @@ make.yaxis.labels <- function(at, main) {
     label.x <- unit(1, "npc") + unit(1, "lines")
   }
   just <- c(hjust, "centre")
-  textGrob(as.character(at), label.x, unit(at, "native"),
+  if (is.logical(label))
+    labels <- as.character(at)
+  else
+    labels <- label
+  textGrob(labels, label.x, unit(at, "native"),
            just=just, rot=0, check.overlap=TRUE, name="labels")
+}
+
+updateYlabels <- function(x) {
+  if (is.logical(x$label) && !x$label) 
+    removeGrob(x, "labels", warn=FALSE)
+  else
+    addGrob(x, make.yaxis.labels(x$at, x$label, x$main))
 }
 
 yaxisGrob <- function(at=NULL, label=TRUE, main=TRUE,
@@ -266,10 +282,10 @@ grid.yaxis <- function(at=NULL, label=TRUE, main=TRUE,
   } else {
     major <- make.yaxis.major(at, main)
     ticks <- make.yaxis.ticks(at, main)
-    if (label)
-      labels <- make.yaxis.labels(at, main)
-    else
+    if (is.logical(label) && !label)
       labels <- NULL
+    else
+      labels <- make.yaxis.labels(at, label, main)
   }
   yg <- applyEdits(gTree(at=at, label=label, main=main, 
                          children=gList(major, ticks, labels),
