@@ -11,7 +11,7 @@ STATE <- function() {
 }
 
 is.odd <- function(x) {
-  x %% 2
+  (x %% 2 == 0)
 }
 
 is.even <- function(x) {
