@@ -17,7 +17,9 @@ xaxisGrob(at = NULL, label = TRUE, main = TRUE,
 \arguments{
   \item{at}{A numeric vector of x-value locations for the tick marks.}
   \item{label}{A logical value indicating whether to draw the labels
-    on the tick marks.}
+    on the tick marks, or an expression or string vector which
+    specify the labels to use.  If not logical, must be the same
+    length as the \code{at} argument.}
   \item{main}{A logical value indicating whether to draw the axis
     at the bottom (\code{TRUE}) or at the top (\code{FALSE}) of the
     viewport.}
@@ -38,7 +40,6 @@ xaxisGrob(at = NULL, label = TRUE, main = TRUE,
   Both functions create an xaxis grob (a graphical object describing an
   xaxis), but only \code{grid.xaxis}
   draws the xaxis (and then only if \code{draw} is \code{TRUE}).
-  
 }
 \value{
   An xaxis grob.  \code{grid.xaxis} returns the value invisibly.
