@@ -17,7 +17,9 @@ yaxisGrob(at = NULL, label = TRUE, main = TRUE,
 \arguments{
   \item{at}{A numeric vector of y-value locations for the tick marks.}
   \item{label}{A logical value indicating whether to draw the labels
-    on the tick marks.}
+    on the tick marks, or an expression or string vector which
+    specify the labels to use.  If not logical, must be the same
+    length as the \code{at} argument.}
   \item{main}{A logical value indicating whether to draw the axis
     at the left (\code{TRUE}) or at the right (\code{FALSE}) of the
     viewport.}
